force-app/main/default/objects/fferpcore__CompanyTaxInformation__c/fields/fferpcore__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The VAT / GST tax code for this company.</description>
    <inlineHelpText>The VAT / GST tax code for this company.</inlineHelpText>
    <label>Tax Code</label>
    <referenceTo>fferpcore__TaxCode__c</referenceTo>
    <relationshipLabel>Company Tax Information Records</relationshipLabel>
    <relationshipName>CompanyTaxInformations</relationshipName>
    <type>Lookup</type>
</CustomField>