force-app/main/default/objects/fferpcore__CompanyTaxInformation__c/fields/fferpcore__TaxType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxType__c</fullName>
    <description>The type of tax to use for products sold by this company. For instance, GST, SUT or VAT.</description>
    <inlineHelpText>The type of tax to use for products sold by this company. For instance, GST, SUT or VAT.</inlineHelpText>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>SUT</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>